--- a/network/config.json
+++ b/network/config.json
@@ -9,11 +9,7 @@
   },
   "text": {
     "more": "",
-    "intro": "Организации в графе связаны по одному или нескольким пунктам:
-	\n-учредителю
-	\n-руководителю
-	\n-адресу
-	\n-как отделения НКО",
+    "intro": Организации в графе связаны по одному или нескольким пунктам:\n-учредителю\n-руководителю\n-адресу\n-как отделения НКО",
     "title": "Граф связей грантополучателей"
   },
   "legend": {
