--- a/network/config.json
+++ b/network/config.json
@@ -9,7 +9,7 @@
   },
   "text": {
     "more": "",
-    "intro": "Организации в графе связаны по одному или нескольким пунктам: учредителю, руководителю, адресу, как отделения НКО.",
+    "intro": "Организации в графе связаны по одному или нескольким пунктам: учредителю, руководителю, адресу, как отделения НКО. Цветом выделены наиболее крупные кластеры. Кластеры из 10 и менее участников - серые. Размер точки зависит от количества связей.",
     "title": "Граф связей грантополучателей"
   },
   "legend": {
